[package]
name = "tides-sui-swap-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
pbjson = "0.6.0"
prost = "0.13.3"
serde = "1.0.219"
tonic = "0.12.3"
anyhow = "1.0.98"
pbjson-types = "0.7.0"

bcs = "0.1.6"
sui-sdk-types = { git = "https://github.com/MystenLabs/sui-rust-sdk", rev = "d97195065e49d9cb1d9b345f58d247fda802107c" }
sui-graphql-client = { git = "https://github.com/MystenLabs/sui-rust-sdk", rev = "d97195065e49d9cb1d9b345f58d247fda802107c" }
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui-rust-sdk", rev = "d97195065e49d9cb1d9b345f58d247fda802107c" }
sui-crypto = { git = "https://github.com/MystenLabs/sui-rust-sdk", rev = "d97195065e49d9cb1d9b345f58d247fda802107c", features = [
    "ed25519",
] }
